PackageComponents/objects/DrugDistributionData__c/DrugDistributionData__c.object-meta.xml
<CustomObject>
    <description>Drugs Distribution Data provides the ability of using standard SF reporting and
        building charts.</description>
    <label>Drug Distribution Data</label>
    <nameField>
        <displayFormat>DDD-{0000000000}</displayFormat>
        <label>Drug Distribution Data #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drugs Distribution Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>