PackageComponents/objects/DrugDistributionData__c/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <description>The channel used to deliver the drug sales distribution data to the patient.</description>
    <inlineHelpText>The channel used to deliver the drug sales distribution data to the patient.</inlineHelpText>
    <label>Channel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>