PackageComponents/objects/DrugDistributionData__c/fields/DataCaptureDate__c.field-meta.xml
<CustomField>
    <fullName>DataCaptureDate__c</fullName>
    <description>The date when the drug sales distribution data is captured.</description>
    <inlineHelpText>The date when the drug sales distribution data is captured.</inlineHelpText>
    <label>Data Capture Date</label>
    <type>Date</type>
</CustomField>