PackageComponents/objects/DrugDistributionData__c/fields/ExternalDrugDstrIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalDrugDstrIdentifier__c</fullName>
    <description>External Drug Sales Distribution Identifier</description>
    <inlineHelpText>External Drug Sales Distribution Identifier</inlineHelpText>
    <label>Ext Drug Distribution Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>