PackageComponents/objects/DrugDistributionData__c/fields/Filter02__c.field-meta.xml
<CustomField>
    <fullName>Filter02__c</fullName>
    <description>The value used to filter the drug prescription sales data.</description>
    <inlineHelpText>The value used to filter the drug prescription sales data.</inlineHelpText>
    <label>Filter 02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>