PackageComponents/objects/DrugDistributionData__c/fields/Filter05__c.field-meta.xml
<CustomField>
    <fullName>Filter05__c</fullName>
    <description>The value used to filter the drug sales distribution data.</description>
    <inlineHelpText>The value used to filter the drug sales distribution data.</inlineHelpText>
    <label>Filter 05</label>
    <length>100</length>
    <type>Text</type>
</CustomField>