PackageComponents/objects/DrugDistributionData__c/fields/MarketId__c.field-meta.xml
<CustomField>
    <fullName>MarketId__c</fullName>
    <description>The identifier of the market that the drug sales distribution data is associated with.</description>
    <inlineHelpText>The identifier of the market that the drug sales distribution data is associated with.</inlineHelpText>
    <label>Market</label>
    <referenceTo>LifeSciMarketableProduct</referenceTo>
    <relationshipName>DrugDistribution_Market</relationshipName>
    <type>Lookup</type>
</CustomField>