PackageComponents/objects/DrugDistributionData__c/fields/Measure01Period05__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period05__c</fullName>
    <description>The sales data measure 01 value for period 05.</description>
    <inlineHelpText>The sales data measure 01 value for period 05.</inlineHelpText>
    <label>Measure 01 Period 05</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>