PackageComponents/objects/DrugDistributionData__c/fields/Measure01Period09__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period09__c</fullName>
    <description>The sales data measure 01 value for period 09.</description>
    <inlineHelpText>The sales data measure 01 value for period 09.</inlineHelpText>
    <label>Measure 01 Period 09</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>