PackageComponents/objects/DrugDistributionData__c/fields/Measure01Period11__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period11__c</fullName>
    <description>The sales data measure 01 value for period 11.</description>
    <inlineHelpText>The sales data measure 01 value for period 11.</inlineHelpText>
    <label>Measure 01 Period 11</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>