PackageComponents/objects/DrugDistributionData__c/fields/Measure02Total__c.field-meta.xml
<CustomField>
    <fullName>Measure02Total__c</fullName>
    <description>The sum of all sales data measure 02 values.</description>
    <inlineHelpText>The sum of all sales data measure 02 values.</inlineHelpText>
    <label>Measure 02 Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>