PackageComponents/objects/DrugDistributionData__c/fields/Measure03Total__c.field-meta.xml
<CustomField>
    <fullName>Measure03Total__c</fullName>
    <description>The sum of all sales data measure 03 values.</description>
    <inlineHelpText>The sum of all sales data measure 03 values.</inlineHelpText>
    <label>Measure 03 Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>