PackageComponents/objects/DrugDistributionData__c/fields/Measure04Total__c.field-meta.xml
<CustomField>
    <fullName>Measure04Total__c</fullName>
    <description>The sum of all sales data measure 04 values.</description>
    <inlineHelpText>The sum of all sales data measure 04 values.</inlineHelpText>
    <label>Measure 04 Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>