PackageComponents/objects/DrugDistributionData__c/fields/Period01Name__c.field-meta.xml
<CustomField>
    <fullName>Period01Name__c</fullName>
    <description>The name of the sales data period 01.</description>
    <inlineHelpText>The name of the sales data period 01.</inlineHelpText>
    <label>Period 01 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>