PackageComponents/objects/DrugDistributionData__c/fields/Period02Name__c.field-meta.xml
<CustomField>
    <fullName>Period02Name__c</fullName>
    <description>The name of the sales data period 02.</description>
    <inlineHelpText>The name of the sales data period 02.</inlineHelpText>
    <label>Period 02 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>