PackageComponents/objects/DrugDistributionData__c/fields/Period03Name__c.field-meta.xml
<CustomField>
    <fullName>Period03Name__c</fullName>
    <description>The name of the sales data period 03.</description>
    <inlineHelpText>The name of the sales data period 03.</inlineHelpText>
    <label>Period 03 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>