PackageComponents/objects/DrugDistributionData__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>The product that the drug sales distribution data is captured for.</description>
    <inlineHelpText>The product that the drug sales distribution data is captured for.</inlineHelpText>
    <label>Product</label>
    <referenceTo>LifeSciMarketableProduct</referenceTo>
    <relationshipName>DrugDistribution_Product</relationshipName>
    <type>Lookup</type>
</CustomField>